--- a/src/css/new_file.css
+++ b/src/css/new_file.css
@@ -1,27 +1,32 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
-a,li{
+
+a,
+li {
 	text-decoration: none;
 	color: #666666;
 }
-ul{
+
+ul {
 	list-style: none;
- 
 }
-#log{
+
+#log {
 	display: flex;
 	width: 1364px;
 	height: 50px;
-	background:#F7F7F7;
+	background: #F7F7F7;
 	border: 1px solid #C7C7C7;
 }
-#log p{
+
+#log p {
 	width: 100px;
 }
-.log_left{
+
+.log_left {
 	/*border: 1px solid black;*/
 	width: 670px;
 	font-size: 13px;
@@ -29,142 +34,161 @@ ul{
 	height: 50px;
 	line-height: 50px;
 }
-.green{
+
+.green {
 	color: green;
 }
-.log_left ul{
+
+.log_left ul {
 	display: flex;
 }
-#log_right{
+
+#log_right {
 	font-size: 13px;
 	display: flex;
 	height: 50px;
 	line-height: 50px;
 }
-#log_right ul{
+
+#log_right ul {
 	display: flex;
-	
 }
-#log_right ul li{
+
+#log_right ul li {
 	margin-left: 15px;
-	
 }
-.red{
+
+.red {
 	color: red;
 }
- #log_two{
- 	 display: flex;
- 	  
-  
- }
- #log_two .image{
- 	display: flex;
- }
- #log_two img{
- 	margin-left: 95px;
- 	margin-top: 20px;
- }
-.list{
+
+#log_two {
 	display: flex;
 }
-.list ul{
+
+#log_two .image {
 	display: flex;
-	 margin-top: 35px;
-	 margin-left: 320px;
-	 
 }
-.list ul li{
+
+#log_two img {
+	margin-left: 95px;
+	margin-top: 20px;
+}
+
+.list {
+	display: flex;
+}
+
+.list ul {
+	display: flex;
+	margin-top: 35px;
+	margin-left: 320px;
+}
+
+.list ul li {
 	margin-left: 50px;
-	 
 }
- 
-.dong{
+
+.dong {
 	position: relative;
-	left:690px;
+	left: 690px;
 	top: -50px;
 }
- 
-.swiper-container{
+
+.swiper-container {
 	width: 1200px;
-	height:350px;
+	height: 350px;
 	text-align: center;
+	/*border: 1px solid black;*/
+	/*border: 1px solid black;*/
 }
- .swiper-pagination{
- 	position: relative;
- 	left: 450px !important;
- 	 
- }
- 
-.swiper-pagination-bullet{
+
+.swiper-pagination {
+	position: relative;
+	left: 630px !important;
+	top: 310px;
+}
+
+.swiper-pagination-bullet {
 	width: 30px !important;
 	height: 30px !important;
 }
-#position{
+
+#position {
 	width: 200px;
-	height:600px;
-	 opacity: 0.8;
+	height: 600px;
+	opacity: 0.8;
 	position: relative;
 	top: -100px;
 	left: 100px;
 }
- #iPhone{
- 	width: 1100px;
- 	margin-left: 110px;
- 	display: flex;
- 	justify-content: space-around;
- }
-#iPhone dl{
+
+#iPhone {
+	width: 1100px;
+	margin-left: 110px;
+	display: flex;
+	justify-content: space-around;
+}
+
+#iPhone dl {
 	display: flex;
 }
-#laji{
+
+#laji {
 	margin: 20px 90px;
 	font-weight: 100;
 	color: #5A5A5A;
 	font-size: 18px;
 }
-#laji h1{
-	 
+
+#laji h1 {
 	font-weight: 500;
 	color: #5A5A5A;
 	font-size: 25px;
 }
-#imge_two p{
+
+#imge_two p {
 	margin-left: 90px;
 }
 
-#big{
+#big {
 	width: 1364px;
 	display: flex;
 	justify-content: space-around;
 }
-#imge_two{
+
+#imge_two {
 	display: flex;
 	width: 100px;
 	justify-content: space-around;
 	margin-left: 60px;
 }
-#iPhone_two{
+
+#iPhone_two {
 	margin-top: 50px;
 	display: flex;
 	width: 1100px;
 	justify-content: space-around;
 }
-#iPhone_twot{
+
+#iPhone_twot {
 	margin-top: 50px;
 	display: flex;
 	width: 1010px;
 	margin-left: -100px;
 	justify-content: space-between;
-	 
 }
-#imge_twot{
+
+#imge_twot {
 	display: flex;
 	width: 100px;
 	justify-content: space-between;
 	margin-left: 20px;
 	width: 203px;
 	height: 299px;
-}         #go{
+}
+
+#go {
 	/*border: 1px solid black;*/
 	margin-top: 20px;
 	margin-left: 70px;
@@ -173,43 +197,45 @@ ul{
 	border-bottom: 1px solid gainsboro;
 	display: flex;
 }
-.rii{
+
+.rii {
 	margin-top: -10px;
-	margin-left: 20px; 
+	margin-left: 20px;
 }
 
-.ri{
+.ri {
 	margin-top: -10px;
-	margin-left: 20px; 
+	margin-left: 20px;
 }
 
-#div1{
+#div1 {
 	float: left;
 	margin-top: 20px;
 	border: 1px solid #D6D6D6;
 	width: 43px;
 	height: 43px;
 	text-align: center;
-	line-height:43px;
+	line-height: 43px;
 	color: #A59999;
 	margin-left: 8px;
 	background: ##A59999;
 	color: white;
 	background: #FC6621;
 }
-#div2{
+
+#div2 {
 	float: left;
 	margin-top: 20px;
 	border: 1px solid #D6D6D6;
 	width: 43px;
 	height: 43px;
 	text-align: center;
-	line-height:43px;
+	line-height: 43px;
 	margin-left: 8px;
 	color: #A59999!important;
 	background: white!important;
 }
- 
+
 #divv {
 	float: left;
 	margin-top: 20px;
@@ -218,11 +244,164 @@ ul{
 	width: 101px;
 	height: 43px;
 	text-align: center;
-	line-height:43px;
+	line-height: 43px;
 	color: #A59999;
-} 
-.box{
+}
+
+.box {
 	float: left;
 	margin-left: 230px;
 	color: #A59999;
+}
+
+#chengshi {
+	width: 550px;
+	height: 180px;
+	border: 1px solid #D6D6D6;
+	font-size: 14px;
+	z-index: 100;
+	margin-top: 50px;
+	border-top: none;
+	margin-left: -600px;
+	display: none;
+}
+
+#hot li {
+	list-style: none;
+	float: left;
+	margin-left: 20px;
+	color: black!important;
+}
+
+#list li {
+	list-style: none;
+	float: left;
+	margin-left: 20px;
+	color: black!important;
+}
+
+#city li {
+	list-style: none;
+	float: left;
+	margin-left: 20px;
+	color: black!important;
+}
+
+#le li {
+	float: left;
+	margin-left: 15px;
+	margin-top: 10px;
+	color: black!important;
+}
+
+#hot li {
+	list-style: none;
+	float: left;
+	margin-left: 20px;
+	color: black!important;
+}
+
+#list li {
+	list-style: none;
+	float: left;
+	margin-left: 20px;
+}
+
+#city li {
+	list-style: none;
+	float: left;
+	margin-left: 20px;
+}
+
+.index-menu {
+	width: 235px;
+	height: 340px;
+	background-color: rgba(0, 0, 0, .5);
+	position: absolute;
+	left: 83px;
+	top: 145px;
+	z-index: 20;
+}
+
+.index-menu-item {
+	font-size: 16px!important;
+	width: 100%;
+	height: 85px;
+	border-bottom: solid 1px #ccc;
+	text-align: center;
+	line-height: 85px;
+	color: #fff;
+	font-size: 18px;
+}
+
+.cate-list-sub {
+	position: absolute;
+	left: 313px;
+	width: 700px;
+	top: 145px;
+	z-index: 20;
+}
+
+.cate-list-sub-inner {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+.cate-list-sub-item {
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 30;
+}
+
+.bg_green {
+	background-color: #5CB85C;
+}
+
+#fix-phone {
+	width: 100%;
+	height: 500px;
+	display: none;
+	background-color: #E0E0E0;
+}
+
+#fix-computer {
+	height: 400px;
+	display: none;
+	width: 100%;
+	display: none;
+	background-color: #E0E0E0;
+}
+
+#cell-phone {
+	height: 440px;
+	display: none;
+	width: 100%;
+	display: none;
+	background-color: #E0E0E0;
+}
+
+#buy-phone {
+	height: 480px;
+	display: none;
+	width: 100%;
+	display: none;
+	background-color: #E0E0E0;
+}
+
+.index-banner {
+	position: relative;
+}
+
+.container {
+	width: 1364px;
+	margin: 0 auto;
+	position: relative;
+}
+
+.index-top-banner {
+	width: 100%;
+	height: 80px;
+	background-color: # D43F3A;
 }
