--- a/src/css/new_file.css
+++ b/src/css/new_file.css
@@ -370,7 +370,6 @@ ul {
 	height: 400px;
 	display: none;
 	width: 100%;
-	display: none;
 	background-color: #E0E0E0;
 }
 
@@ -404,4 +403,86 @@ ul {
 	width: 100%;
 	height: 80px;
 	background-color: # D43F3A;
+}
+
+#xiu1 {
+	float: left;
+	margin-top: 20px;
+	width: 90%;
+	margin-left: 10px;
+}
+
+#xiu1 li {
+	width: 160px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	float: left; 
+	border: 1px solid gray;
+	margin-left: 50px;
+	margin-top: 20px;
+}
+
+#xiu2one,
+#xiu2two {
+	float: left;
+	margin-top: 20px;
+	width: 100%;
+	margin-left: 40px;
+}
+
+#xiu2one li {
+	width: 160px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	float: left; 
+	border: 1px solid gray;
+	margin-left: 30px;
+	margin-top: 20px;
+}
+
+#xiu2two li {
+	width: 160px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	float: left; 
+	border: 1px solid gray;
+	margin-left: 30px;
+	margin-top: 20px;
+}
+#xiu3{
+	float: left;
+	margin-top: 20px;
+	width: 100%;
+	margin-left: 20px;
+}
+#xiu3 li{
+	width: 100px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	float: left; 
+	border: 1px solid gray;
+	margin-left: 30px;
+	margin-top: 20px;
+	
+}
+#fix-computerfor{
+	float: left;
+	margin-top: 20px;
+	width: 100%;
+	margin-left: 20px;
+}
+#fix-computerfor li{
+	
+	width: 200px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	float: left; 
+	border: 1px solid gray;
+	margin-left: 30px;
+	margin-top: 20px;
 }
